<?xml version="1.0" encoding="UTF-8"?>
<!--
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.apache.datasketches</groupId>
    <artifactId>datasketches-memory</artifactId>
    <version>3.0.2</version>
  </parent>

  <artifactId>datasketches-memory-java11</artifactId>
  <name>${project.artifactId}</name>
  <packaging>jar</packaging>

  <properties>
    <java.version>11</java.version>
    <jdk-toolchain.version>11</jdk-toolchain.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <maven.javadoc.skip>>true</maven.javadoc.skip>
    <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
    <!-- jdk.internal.misc is used to call public Unsafe & public VM -->
    <arg.jdk.internal.misc>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg.jdk.internal.misc>
    <!-- jdk.internal.ref is used to call public Cleaner -->
    <arg.jdk.internal.ref>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</arg.jdk.internal.ref>
    <!-- java.nio is used to open MappedByteBuffer load0, isloaded0, & force0 for reflection -->
    <arg.java.nio>--add-opens=java.base/java.nio=ALL-UNNAMED</arg.java.nio>
    <!-- sun.nio.ch is used to open FileChannelImpl for map0 & unmap0-->
    <arg.sun.nio.ch>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</arg.sun.nio.ch>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <fork>true</fork> <!-- required if Maven is using a different JVM -->
          <compilerArgs>
            <arg>${arg.jdk.internal.ref}</arg>
            <arg>${arg.jdk.internal.misc}</arg>
            <arg>${arg.java.nio}</arg>
            <arg>${arg.sun.nio.ch}</arg>
          </compilerArgs>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-toolchains-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>toolchain</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <toolchains>
            <jdk>
              <version>${java.version}</version>
            </jdk>
          </toolchains>
        </configuration>
      </plugin>
     </plugins>
  </build>

  <profiles>

    <profile>
      <id>assemble-mr-jar</id>
      <activation>
        <property>
          <name>!unsetDefaultProfile</name>
        </property>
      </activation>
      <properties>
        <assembly.script.path>${session.rootDirectory}/tools/scripts/package-multi-release-jar.sh</assembly.script.path>
        <assembly.java.home>${env.JAVA_HOME}</assembly.java.home>
        <assembly.git.tag>${project.version}</assembly.git.tag>
        <assembly.base.dir>${session.rootDirectory}</assembly.base.dir>
      </properties>
      <build>
        <defaultGoal>exec:exec</defaultGoal>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <!-- The trailing comment on the line below ignores an eclipse warning. The version is required for dependency updates. -->
            <version>${exec-maven-plugin.version}</version><!--$NO-MVN-MAN-VER$--> <!-- ?? -->
            <executions>
              <execution>
                <id>package-mr-jar</id>
                <goals>
                  <goal>exec</goal>
                </goals>
                <phase>package</phase>
                <configuration>
                  <executable>bash</executable>
                  <commandlineArgs>${assembly.script.path} ${assembly.java.home} ${assembly.git.tag} ${assembly.base.dir}</commandlineArgs>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <dependencies>
  	<dependency>
  		<groupId>org.apache.datasketches</groupId>
  		<artifactId>datasketches-memory-java8</artifactId>
  		<version>3.0.2</version>
  	</dependency>
  </dependencies>
</project>
